# aizen-voice-agent

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  button.html  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml
app/: main.py
app/core/: __init__.py
app/core/config/: ai.py  app.py  config.py  conversational_states.py  elevenlabs.py  enums.py  gohighlevel.py  init_messages.py  n8n.py  outlook.py  prompts.py  scenarios.py  teams.py  twilio.py  vector_db.py
app/core/dependencies/: __init__.py  bot.py  chat.py  services.py  tool.py  transcription.py
app/core/mixins/: __init__.py  llm.py  log.py
app/integrations/: base.py  outlook.py  registry.py  teams.py
app/mock/: mocked_user.py
app/routers/: __init__.py  chat_bot.py  cold_calling_bot.py  health_check.py  knowledge_base.py  web_bot.py
app/schemas/: chat_bot.py  client.py  config.py  contact.py  conversational_states.py  events.py  init_message.py  messenger.py  phone.py  scenarios.py  service.py  summary.py  twilio.py
app/schemas/gohighlevel/: appointment.py  calendar.py  contact.py
app/services/: base_bot.py  chat_bot_service.py  cold_calling_bot.py  elevenlabs.py  flow_classifier.py  gohighlevel.py  knowledge_base.py  openai_realtime.py  summary.py  tool_service.py  transcription.py  twilio_service.py  web_bot.py
app/services/gohighlevel/: appointment.py  calendar.py  client.py  contact.py  gohighlevel.py
app/services/integrations/: base.py  teams.py  (+2 more)
app/test/: test.html  test2.html
app/utils/: format_transcript.py  iso_to_unix.py  twilio_sig.py
(+5 files in other folders)
